# MarkUpsideDown

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: codeql.yml  dependency-review.yml  pages.yml  pr-check.yml  release.yml
docs/: ai-integration.md  architecture.md  keyboard-shortcuts.md  mcp-server.md  worker-deployment.md
docs/manual/: ai-integration.md  crawling-websites.md  editing-features.md  editor-basics.md  file-management.md  git-integration.md  importing-content.md  index.md  installation.md  introduction.md  keyboard-shortcuts.md  presentation.md  preview.md  publishing.md  search.md  tags.md
mcp-server/: package-lock.json  package.json
mcp-server-rs/: Cargo.toml
mcp-server-rs/src/: bridge.rs  main.rs  tools.rs
mcp-server/src/: bridge.ts  index.ts
scripts/: test-mcp-bridge.sh
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  claude.rs  cloudflare.rs  commands.rs  error.rs  main.rs  menu.rs  pty.rs  slack.rs  util.rs
src/editor/: mod.rs
src/integrations/: cloudflare.rs  github.rs
src/preview/: mod.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
ui/src/: auto-link-title.ts  batch-import.ts  claude-panel.ts  clipboard.ts  command-palette.ts  crawl.ts  document-structure.ts  download-images.ts  fetch-markdown.ts  file-ops.ts  file-watcher.ts  frontmatter-panel.ts  git-panel.js  git-panel.ts  github-panel.js  github-panel.ts  global.d.ts  (+31 more)
worker/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
(+11 files in other folders)
