[package]
name = "markupsidedown"
version = "0.1.0"
edition = "2024"
description = "AI-era Markdown editor with live preview, Cloudflare Markdown for Agents, GitHub, and Claude Code integration"
license = "AGPL-3.0-or-later"
repository = "https://github.com/masanarihigashi/markupsidedown"

[dependencies]
# GUI framework
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }

# Markdown parsing & rendering
pulldown-cmark = "0.12"

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File dialog
rfd = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
